feat: tag me up implementation

--- a/src/assets/locales/eng.json
+++ b/src/assets/locales/eng.json
@@ -2,5 +2,6 @@
   "save":"Save",
   "import":"Import JSON file",
   "clear":"Clear",
-  "load":"Load an image"
+  "load":"Load an image",
+  "unavailable":"Unavailable"
 }
