--- a/src/assets/locales/fra.json
+++ b/src/assets/locales/fra.json
@@ -2,5 +2,6 @@
   "save":"Sauvegarder",
   "import":"Importer un fichier JSON",
   "clear":"Réinitialiser",
-  "load":"Charger une image"
+  "load":"Charger une image",
+  "unavailable":"Indisponible"
 }
