--- a/src/assets/locales/eng.json
+++ b/src/assets/locales/eng.json
@@ -1,7 +1,10 @@
 {
-  "save":"Save",
-  "import":"Import JSON file",
-  "clear":"Clear",
-  "load":"Load an image",
-  "unavailable":"Unavailable"
+  "tagmeup": {
+    "explaination": "blabla blabla",
+    "save": "Save",
+    "import": "Import JSON file",
+    "clear": "Clear",
+    "load": "Load an image",
+    "unavailable": "Unavailable"
+  }
 }
